<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/mode_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/ic_cycle_btn"
            android:text="@string/mode_1" />

        <Button
            android:id="@+id/mode_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/ic_cycle_btn"
            android:text="@string/mode_2" />

        <Button
            android:id="@+id/mode_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/ic_cycle_btn"
            android:text="@string/mode_3" />

        <Button
            android:id="@+id/mode_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/ic_cycle_btn"
            android:text="@string/mode_4" />

        <Button
            android:id="@+id/mode_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/ic_cycle_btn"
            android:text="@string/mode_5" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>