<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup"
    android:orientation="vertical"
    android:padding="4dp">

    <RadioButton
        android:id="@+id/chinese_tradition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:button="@drawable/ic_language_tw"
        android:buttonTintMode="multiply"
        android:ems="10"
        android:maxEms="10"
        android:paddingStart="24dp"
        android:text="@string/lang_chinese_tradition"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <RadioButton
        android:id="@+id/chinese_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:button="@drawable/ic_language_ch"
        android:buttonTintMode="multiply"
        android:ems="10"
        android:maxEms="10"
        android:paddingStart="24dp"
        android:text="@string/lang_chinese_simple"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <RadioButton
        android:id="@+id/us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:button="@drawable/ic_language_us"
        android:buttonTintMode="multiply"
        android:ems="10"
        android:maxEms="10"
        android:paddingStart="24dp"
        android:text="@string/lang_us"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <RadioButton
        android:id="@+id/japanese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:button="@drawable/ic_language_jp"
        android:buttonTintMode="multiply"
        android:ems="10"
        android:maxEms="10"
        android:paddingStart="24dp"
        android:text="@string/lang_japanese"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:visibility="gone" />

    <RadioButton
        android:id="@+id/korean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:button="@drawable/ic_language_kr"
        android:buttonTintMode="multiply"
        android:ems="10"
        android:maxEms="10"
        android:paddingStart="24dp"
        android:text="@string/lang_korean"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:visibility="gone" />
</RadioGroup>