<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup"
    android:divider="@drawable/div_h"
    android:orientation="vertical"
    android:padding="12dp"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/ic_service_cup"
            android:paddingStart="16dp"
            android:text="@string/label_cup" />

        <ImageButton
            android:id="@+id/cup_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:src="@drawable/ic_dec"
            app:tint="@color/color_action_btn" />

        <TextView
            android:id="@+id/cup_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="1"
            android:gravity="center"
            android:text="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorWhite" />

        <ImageButton
            android:id="@+id/cup_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_add"
            app:tint="@color/color_action_btn" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/ice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:button="@drawable/ic_service_ice"
        android:paddingStart="16dp"
        android:text="@string/label_ice" />

    <CheckBox
        android:id="@+id/paper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:button="@drawable/ic_service_paper"
        android:paddingStart="16dp"
        android:text="@string/label_paper" />


    <CheckBox
        android:id="@+id/clean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:button="@drawable/ic_service_desk_clean"
        android:paddingStart="16dp"
        android:text="@string/label_desk_clean" />

    <CheckBox
        android:id="@+id/check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:button="@drawable/ic_service_checkout"
        android:paddingStart="16dp"
        android:text="@string/label_checkout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/summit"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_action_btn"
            android:text="@string/label_send"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextClock
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>
</LinearLayout>