<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/style_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_style_btn"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_style_dot"
            android:drawableTint="@color/accentPurple"
            android:text="@string/mode_1" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_style_1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/style_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_style_btn"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_style_dot"
            android:drawableTint="@color/accentPurple"
            android:text="@string/mode_2" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_style_2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/style_3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_style_btn"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_style_dot"
            android:drawableTint="#203DE3"
            android:text="@string/mode_3" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_style_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/style_4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_style_btn"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_style_dot"
            android:drawableTint="#3F51B5"
            android:text="@string/mode_4" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_style_4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/style_5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_style_btn"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_style_dot"
            android:drawableTint="#9C27B0"
            android:text="@string/mode_5" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_style_5" />
    </LinearLayout>
</LinearLayout>